# BreakPoint-AI

./: .gitignore  README.md  inference.py  lstm_features.txt  main.py  pyproject.toml  requirements.txt
artifacts/logreg/20260129_192220/: model.joblib  preprocessor.pkl
artifacts/logreg/20260130_142134/: metrics.json  model.joblib  preprocessor.pkl
artifacts/logreg/20260130_192723/: model.joblib  preprocessor.pkl  report.txt
artifacts/lstm/20260129_202940/: best_model.pt  metrics.json  preprocessor.pkl  report.txt
artifacts/lstm/20260130_184252/: best_model.pt  metrics.json  preprocessor.pkl  report.txt
artifacts/lstm/20260130_194552/: Notes.md  best_model.pt  best_params.yaml  metrics.json  preprocessor.pkl  report.txt
artifacts/lstm/20260203_093121/: best_model.pt  metrics.json  preprocessor.pkl  report.txt
artifacts/rf/20260130_192357/: Notes.md  metrics.json  preprocessor.pkl  report.txt
artifacts/rf/20260130_193318/: Notes.md  metrics.json  preprocessor.pkl  report.txt
artifacts/rf/20260203_092649/: metrics.json  preprocessor.pkl  report.txt
configs/: config.yaml  config_logreg.yaml  config_lstm.yaml  config_rf.yaml  config_rf_raw.yaml
data/processed/: test_engineered.csv  val_engineered.csv
src/: __init__.py  config.py  data.py  evaluation.py  features.py  plot_comparison.py  training.py  tuning.py
src/models/: baselines.py  nn.py  stacking.py  xgb.py
